# _project_template_linux_cpp_cuda_omp_

./: .clang-format  .gitignore  CMakeLists.txt  config  config.sh  init_git_repo.sh  new_project.sh  push.sh  start.sh  tmp.txt
_inc/: __operations_counter__.h  __preprocessor__.h  parallel_common.h  time_stamp.h
_inc/base/: __operations_counter__.h  __preprocessor__.h  __time_stamp__.h
_src/: __preprocessor__.cpp  _format_tester_.cpp  main.cpp  main.cu
_src/base/: __preprocessor__.cpp  _format_tester_.cpp
_test/: test.cpp
scripts/: formating_hook.sh  production.sh  test.sh
